--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,19 @@
-body {
-  background-color: rgb(224, 224, 144);
-}
+@import "./utils/variables";
+@import "./utils/visually-hidden";
+@import "./utils/placeholders";
+@import "./utils/mixins";
+
+@import "./components/buttons";
+
+@import "./components/section";
+@import "./components/page-header";
+@import "./components/section-hero";
+@import "./components/section-skills";
+@import "./components/section-works";
+@import "./components/section_team";
+@import "./components/section-clients";
+@import "./components/page-footer";
+
+@import "./components/modal-window";
+
+@import "./components/portfolio";
