--- a/sass/components/_section-skills.scss
+++ b/sass/components/_section-skills.scss
@@ -1,21 +1,25 @@
-/* Наши особенности */
-.skills-title {
+.skills__list {
+  display: flex;
+}
+
+.skills__box {
+  width: 270px;
+}
+.skills__list li:not(:last-child) {
+  margin-right: 30px;
+}
+.skills__picture {
+  @include centeredFlex;
+
+  background-color: getColor("secondaryBgc");
+  height: 120px;
+  margin-bottom: 30px;
+}
+.skills__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--title-text-color);
+  color: getColor("titleText");
   margin-bottom: 10px;
-}
-
-.skills-box {
-  width: 270px;
-}
-.skills-picture {
-  display: flex;
-  background-color: #f5f4fa;
-  height: 120px;
-  margin-bottom: 30px;
-  justify-content: center;
-  align-items: center;
 }
