--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,28 +1,28 @@
 .button {
   @include centeredFlex;
 
-  font-family: inherit;
+  // font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
 
-  color: $secondaryTextColor;
-  background-color: $brandColor;
+  background-color: getColor("accent");
+  color: getColor("secondaryText");
 
-  cursor: pointer;
+  // cursor: pointer;
 
   width: 200px;
   height: 50px;
 
   border: none;
   border-radius: 4px;
-  box-shadow: 0px 4px 4px $boxShadowColor;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    background-color: $buttonHoverColor;
+    background-color: getColor("buttonHoverColor");
   }
 }
