--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,15 +1,24 @@
 .logo {
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
-  color: var(--brand-color);
-  text-decoration: none;
+  color: getColor("accent");
+
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
-.logo-item-black {
-  color: #000000;
+  .logo--black {
+    color: getColor("additionalText");
+  }
+  .logo--white {
+    color: getColor("secondaryText");
+  }
+  .logo-header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+  .logo-footer {
+    display: block;
+    padding: 0;
+  }
 }
