--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -32,6 +32,9 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal-button {
+  margin: 0 auto;
+}
 
 .close-button {
   display: flex;
