--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,17 @@
-@import "./utils/variables";
-@import "./utils/visually-hidden";
+@import "./base/normalize";
+@import "./base/fonts";
+
+@import "./utils/nullstyle";
+@import "./utils/variables-colors";
+@import "./utils/variables-fonts";
 @import "./utils/placeholders";
 @import "./utils/mixins";
+@import "./utils/visually-hidden";
 
+@import "./components/body";
+@import "./components/logo";
 @import "./components/buttons";
 
-@import "./components/section";
 @import "./components/page-header";
 @import "./components/section-hero";
 @import "./components/section-skills";
