--- a/sass/components/_section-clients.scss
+++ b/sass/components/_section-clients.scss
@@ -1,23 +1,35 @@
-/* Постоянные клиенты */
-.clients-icons-link {
-  display: flex;
+.clients__title {
+  @include sectionTitle;
+  margin-bottom: 50px;
+}
+.clients__list {
+  @include centeredFlex;
+}
+.clients__picture:not(:last-child) {
+  margin-right: 30px;
+}
+.clients__link {
+  @include centeredFlex;
+
   width: 170px;
   height: 92px;
-  border: 1px solid #afb1b8;
+  border: 1px solid getColor("iconColor");
   border-radius: 4px;
-  justify-content: center;
-  align-items: center;
+
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    border: 1px solid getColor("accent");
+  }
+
+  &:hover .clients__icon,
+  &:focus .clients__icon {
+    fill: getColor("accent");
+  }
 }
-.clients-icons-link:hover,
-.clients-icons-link:focus {
-  border: 1px solid var(--brand-color);
-}
-.clients-icons-item {
-  fill: #afb1b8;
+
+.clients__icon {
+  fill: getColor("iconColor");
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.clients-icons-link:hover .clients-icons-item,
-.clients-icons-link:focus .clients-icons-item {
-  fill: var(--brand-color);
 }
