--- a/sass/utils/_variables-colors.scss
+++ b/sass/utils/_variables-colors.scss
@@ -11,6 +11,7 @@ $colors: (
   //Лого, иконки в модальном окне
   "iconColor": #afb1b8,
   //Иконки
+  "iconHover": #ffffff,
   "primaryBgc": #ffffff,
   //Основной фон
   "secondaryBgc": #f5f4fa,
