--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,4 +1,7 @@
 .logo {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -12,13 +15,5 @@
   }
   .logo--white {
     color: getColor("secondaryText");
-  }
-  .logo-header {
-    padding-top: 24px;
-    padding-bottom: 25px;
-  }
-  .logo-footer {
-    display: block;
-    padding: 0;
   }
 }
