--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,70 +1,83 @@
-.link-nav {
+.page-header {
+  border-bottom: 1px solid #ececec;
+}
+.page-header__menu {
+  display: flex;
+  align-items: center;
+}
+.page-header__nav {
+  display: flex;
+}
+.page-header__list {
+  display: flex;
+  margin-left: 93px;
+}
+.page-header__item:not(:first-child) {
+  margin-left: 50px;
+}
+.page-header__link {
   position: relative;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  color: var(--title-text-color);
+  color: getColor("titleText");
   letter-spacing: 0.02em;
-  text-decoration: none;
 
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.link-nav:hover,
-.link-nav:focus {
-  color: var(--brand-color);
-}
-.link-nav.current {
-  color: var(--brand-color);
-}
-.link-nav.current::after {
-  content: "";
-  position: absolute;
-  bottom: -3px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: var(--brand-color);
-  border-radius: 2px;
-}
-.site-nav {
-  display: flex;
-  margin-left: 93px;
-}
-.site-nav li:not(:first-child) {
-  margin-left: 50px;
-}
-.nav {
-  display: flex;
-}
 
-.main-menu {
-  display: flex;
-  align-items: center;
+  &:hover,
+  &:focus {
+    color: getColor("accent");
+  }
+  &--current {
+    color: getColor("accent");
+  }
+  &--current::after {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: getColor("accent");
+    border-radius: 2px;
+  }
 }
 .contacts {
   display: flex;
   margin-left: auto;
-  align-items: center;
 }
-.contacts .item + .item {
-  margin-left: 30px;
+.contacts__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  color: getColor("titleText");
+  letter-spacing: 0.02em;
+
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:not(:first-child) {
+    margin-left: 30px;
+  }
+  &:hover,
+  &:focus {
+    color: getColor("accent");
+  }
+  &:hover .contacts__icon,
+  &:focus .contacts__icon {
+    fill: getColor("accent");
+  }
 }
-.icon-contacts {
-  fill: var(--primary-text-color);
+.contacts__icon {
+  fill: getColor("primaryText");
   margin-right: 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link-nav:hover .icon-contacts,
-.link-nav:focus .icon-contacts {
-  fill: var(--brand-color);
-}
-
-/* Граница */
-.page-header {
-  border-bottom: 1px solid #ececec;
 }
