--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,23 +1,18 @@
-/* Портфолио */
-/* Кнопки */
-.section-portfolio h1 {
-  visibility: hidden;
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+.portfolio__title {
+  @extend .visually-hidden;
 }
-.filter-button {
-  font-family: inherit;
+.portfolio__filter {
+  @include centeredFlex;
+  margin-bottom: 50px;
+}
+.portfolio__button {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
 
-  color: var(--title-text-color);
-  background-color: var(--secondary-bgc);
-  cursor: pointer;
+  color: getColor("titleText");
+  background-color: getColor("secondaryBgc");
 
   padding: 6px 22px;
   border: 0px;
@@ -26,90 +21,84 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.filter-button:hover,
-.filter-button:focus {
-  background-color: var(--brand-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  color: #fff;
-}
-.flex-button {
-  display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
-}
-.flex-button li:not(:last-child) {
+
   margin-right: 8px;
+
+  &:hover,
+  &:focus {
+    background-color: getColor("accent");
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    color: getColor("secondaryText");
+  }
 }
-/* Проекты */
-.project-title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--title-text-color);
-}
-.project-text {
-  font-size: 16px;
-  line-height: 1.87;
-  color: var(--primary-text-color);
-}
-.project-link {
-  text-decoration: none;
-}
-.project-link:hover,
-.project-link:focus {
-  display: block;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.flex-project {
+.card-list {
   display: flex;
   flex-wrap: wrap;
 }
-.flex-project li:not(:nth-child(3n)) {
+.card:not(:nth-child(3n)) {
   margin-right: 30px;
 }
-.flex-project li:not(:nth-last-child(-n + 3)) {
+.card:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
 }
-.card-text {
+.card__link {
+  display: block;
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  &:hover .card__overlay,
+  &:focus .card__overlay {
+    transform: translatey(0);
+  }
+  &:hover .overlay__text,
+  &:focus .overlay__text {
+    opacity: 1;
+  }
+}
+.card__name {
   border-bottom: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   padding: 20px 24px;
 }
-/* Overlay */
-.project-image {
+.card__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: getColor("titleText");
+}
+.card__subtitle {
+  font-size: 16px;
+  line-height: 1.87;
+  color: getColor("primaryText");
+}
+
+// Overlay
+.card__image {
   position: relative;
   overflow: hidden;
 }
-.project-link:hover .overlay,
-.project-link:focus .overlay {
-  transform: translatey(0);
-}
-.project-link:hover .overlay-text,
-.project-link:focus .overlay-text {
-  opacity: 1;
-}
-.overlay {
+
+.card__overlay {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--brand-color);
+  background-color: getColor("accent");
 
   transform: translatey(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.overlay > .overlay-text {
-  color: #fff;
+.card__text {
+  color: getColor("secondaryText");
   padding: 63px 24px;
   margin: 0;
   font-size: 18px;
   line-height: 1.56;
-  opacity: 0;
 }
