--- a/sass/components/_section-development.scss
+++ b/sass/components/_section-development.scss
@@ -1,22 +1,22 @@
-/* Чем мы занимаемся */
-.section-work {
+.development {
   padding-top: 0;
 }
-.section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  color: var(--title-text-color);
-
+.development__title {
+  @include sectionTitle;
   margin-bottom: 50px;
 }
-.thumb {
+.development__list {
+  display: flex;
+}
+.development__thumb {
   position: relative;
   overflow: hidden;
   z-index: -1;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
-.thumb-label {
+.development__label {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -28,6 +28,6 @@
   line-height: 1.14;
   text-align: center;
   text-transform: uppercase;
-  color: #ffffff;
+  color: getColor("secondaryText");
   background-color: rgba(47, 48, 58, 0.8);
 }
