--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -3,3 +3,10 @@
   justify-content: center;
   align-items: center;
 }
+@mixin sectionTitle() {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: getColor("titleText");
+}
