--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -341,7 +340,6 @@ ul li {
   list-style: none;
 }
 
-/* Оптимизация картинок */
 img {
   display: block;
   max-width: 100%;
@@ -360,7 +358,6 @@ img {
 }
 
 .container {
-  outline: 2px solid red;
   width: 1200px;
   margin: 0 auto;
   padding-left: 15px;
@@ -506,6 +503,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-left: auto;
 }
 
@@ -816,6 +816,7 @@ body {
 
 .clients__link:hover, .clients__link:focus {
   border: 1px solid #2196f3;
+  outline: none;
 }
 
 .clients__link:hover .clients__icon,
@@ -1207,7 +1208,7 @@ body {
   border-radius: 2px;
 }
 
-.agreement__icon {
+.checkbox-visual .agreement__icon {
   opacity: 0;
 }
 
@@ -1217,6 +1218,9 @@ body {
   outline: none;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.checkbox-hidden:checked + .checkbox-visual .agreement__icon {
   opacity: 1;
 }
 
