--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -1,5 +1,5 @@
 .container {
-  outline: 2px solid red;
+  // outline: 2px solid red;
 
   width: 1200px;
   margin: 0 auto;
@@ -22,4 +22,3 @@ body {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-
